[gd_scene load_steps=23 format=2]

[ext_resource path="res://Logic/Sound.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sound/VOX_Robot_DrillRobot_02.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sound/VOX_Robot_DrillRobot_03.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sound/VOX_Robot_DrillRobot_01.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sound/VOX_Robot_FloorRobot_02.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sound/VOX_Robot_FloorRobot_01.ogg" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sound/VOX_Robot_FloorRobot_03.ogg" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sound/WATR_MULTIJAM_FishSwim_01.ogg" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sound/WATR_MULTIJAM_FishSwim_02.ogg" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sound/WATR_MULTIJAM_FishSwim_03.ogg" type="AudioStream" id=10]
[ext_resource path="res://Assets/Sound/WATR_MULTIJAM_FishSwim_04.ogg" type="AudioStream" id=11]
[ext_resource path="res://Assets/Sound/WATR_MULTIJAM_FishSwim_05.ogg" type="AudioStream" id=12]
[ext_resource path="res://Assets/Sound/UI_MULTIJAM_Menu_Upgrades_02_02.ogg" type="AudioStream" id=13]
[ext_resource path="res://Assets/Sound/AMB_MULTIJAM_Underwater.ogg" type="AudioStream" id=14]
[ext_resource path="res://Assets/Sound/MOTR_MULTIJAM_Drill_lp.ogg" type="AudioStream" id=15]
[ext_resource path="res://Assets/Sound/UI_MULTIJAM_Crystal_PickUp_02.ogg" type="AudioStream" id=16]
[ext_resource path="res://Assets/Sound/music/Finland_Full.ogg" type="AudioStream" id=17]
[ext_resource path="res://Assets/Sound/music/Humuhumunukunukuapua_Full.ogg" type="AudioStream" id=18]
[ext_resource path="res://Assets/Sound/music/Schubler Corals.ogg" type="AudioStream" id=19]
[ext_resource path="res://Assets/Sound/music/7_Former_Colors_of_the_Rainbow_Full.ogg" type="AudioStream" id=20]
[ext_resource path="res://Assets/Sound/UI_MULTIJAM_Menu_Hover_01_03.ogg" type="AudioStream" id=21]
[ext_resource path="res://Assets/Sound/UI_MULTIJAM_Menu_01_02.ogg" type="AudioStream" id=22]

[node name="Sound" type="Node"]
script = ExtResource( 1 )

[node name="UpgradeBoughtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -8.0
bus = "SFX"

[node name="DrillVoices" type="Node" parent="."]

[node name="Voice1" type="AudioStreamPlayer" parent="DrillVoices"]
stream = ExtResource( 4 )
bus = "SFX"

[node name="Voice2" type="AudioStreamPlayer" parent="DrillVoices"]
stream = ExtResource( 2 )
bus = "SFX"

[node name="Voice3" type="AudioStreamPlayer" parent="DrillVoices"]
stream = ExtResource( 3 )
bus = "SFX"

[node name="RollerVoices" type="Node" parent="."]

[node name="Voice1" type="AudioStreamPlayer" parent="RollerVoices"]
stream = ExtResource( 6 )
bus = "SFX"

[node name="Voice2" type="AudioStreamPlayer" parent="RollerVoices"]
stream = ExtResource( 5 )
bus = "SFX"

[node name="Voice3" type="AudioStreamPlayer" parent="RollerVoices"]
stream = ExtResource( 7 )
bus = "SFX"

[node name="FishAmbienceTimer" type="Timer" parent="."]

[node name="UnderwaterAmbienceTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="FishAmbiences" type="Node" parent="."]

[node name="Ambience1" type="AudioStreamPlayer" parent="FishAmbiences"]
stream = ExtResource( 8 )
bus = "SFX"

[node name="Ambience2" type="AudioStreamPlayer" parent="FishAmbiences"]
stream = ExtResource( 9 )
bus = "SFX"

[node name="Ambience3" type="AudioStreamPlayer" parent="FishAmbiences"]
stream = ExtResource( 10 )
bus = "SFX"

[node name="Ambience4" type="AudioStreamPlayer" parent="FishAmbiences"]
stream = ExtResource( 11 )
bus = "SFX"

[node name="Ambience5" type="AudioStreamPlayer" parent="FishAmbiences"]
stream = ExtResource( 12 )
bus = "SFX"

[node name="UnderwaterAmbience" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
bus = "SFX"

[node name="Drilling" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
volume_db = -5.0
bus = "SFX"

[node name="BackToOceanSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -12.0

[node name="Themes" type="Node" parent="."]

[node name="SchublerCorals" type="AudioStreamPlayer" parent="Themes"]
stream = ExtResource( 19 )
volume_db = -12.0
bus = "Music"

[node name="Humuhumu" type="AudioStreamPlayer" parent="Themes"]
stream = ExtResource( 18 )
volume_db = -12.0
bus = "Music"

[node name="ColorsOfTheRainbow" type="AudioStreamPlayer" parent="Themes"]
stream = ExtResource( 20 )
volume_db = -12.0
bus = "Music"

[node name="FinlandShopTheme" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = -12.0
bus = "Music"

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = -8.0
bus = "SFX"

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -4.0
bus = "SFX"

[node name="HoverTimer" type="Timer" parent="."]
wait_time = 1.8

[node name="CrystalMined" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -6.0
bus = "SFX"

[connection signal="timeout" from="FishAmbienceTimer" to="." method="_on_FishAmbienceTimer_timeout"]
[connection signal="timeout" from="UnderwaterAmbienceTimer" to="." method="_on_UnderwaterAmbienceTimer_timeout"]
[connection signal="timeout" from="HoverTimer" to="." method="_on_HoverTimer_timeout"]
